--- a/index.html
+++ b/index.html
@@ -63,40 +63,75 @@
         <h1>An adventurous explorer who runs the world around her.</h1>
         </section>
 
-        <section class="adjs">
-            <ul>
-                <li>Creative</li>
-                <li>Intelligent</li>
-                <li>Fun-Loving</li>
-                <li>Ambitious</li>
-                <li>Calm</li>
-                <li>Goofy</li>
-                <li>Athletic</li>
-                <li>Brave</li>
-            </ul>
+        <section class="pic">
+            <img src="media/Motto.jpg" alt="Motto" width="200" height="200">
         </section>
 
         <section class="pic">
-            <img src="media/file-4.jpeg" alt="crystals">
+            <img src="media/file-4.jpeg" alt="crystals" width="200" height="200">
+        </section>
+
+         <section class="pic">
+            <img src="media/creative.jpg" alt="creative" width="200" height="200">
         </section>
 
         <section class="pic">
-            <img src="media/file4-2.jpeg" alt="trapped in my head">
+            <img src="media/file4-2.jpeg" alt="trapped in my head" width="200" height="200">
         </section>
 
         <section class="pic">
-            <img src="media/file5-1.jpeg" alt="purple sunset">
+            <img src="media/intelligent.jpg" alt="intelligent" width="200" height="200">
         </section>
 
         <section class="pic">
-            <img src="media/file3-2.jpeg" alt="chill">
+            <img src="media/file5-1.jpeg" alt="purple sunset" width="200" height="200">
         </section>
 
         <section class="pic">
-            <img src="media/file1-2.jpeg" alt="purple moon">
+            <img src="media/fun-loving.jpg" alt="fun-loving" width="200" height="200">
         </section>
 
         <section class="pic">
+            <img src="media/file3-2.jpeg" alt="chill" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/ambitious.jpg" alt="ambitious" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/file1-2.jpeg" alt="purple moon" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/calm.jpg" alt="calm" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/squad.png" alt="brave" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/goofy.jpg" alt="goofy" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/purple%20fire.png" alt="brave" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/athletic.jpg" alt="athletic" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/purple%20smoke.png" alt="brave" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/brave.jpg" alt="brave" width="200" height="200">
+        </section>
+
+        <section class="inspiration">
             inspiration<a href="https://www.youtube.com/">YouTube.com</a>
         </section>
 
