--- a/index.html
+++ b/index.html
@@ -6,63 +6,33 @@
         <meta name="description" content="This is my story">
         <meta name="author" content="Nadeah West">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-        <style>
-            html{
-                box-sizing:border-box;
-                }
-                *,*:before, *after {box-sizing:inherit;
-                }
-            #menu{
-                border:3px solid purple; display:flex; flex-direction: row; align-items: center; flex-wrap:wrap;
-                }
-            section{
-                background: #C0C0C0;
-                Margin: 10px
-                Padding: 20px
-                border: 1px dotted purple;
-                width:240px
-                }
-            .title{
-                background color: #C0C0C0;
-                color: purple
-                line-height: 4em;
-                }
-            h1 {
-                color: Purple;
-                font-size: large;
-                font-family: 'Open Sans', sans-serif;
-                background: #C0C0C0;
-                }
-            h2{
-                color: black;
-                font-size: Medium;
-                font-family: 'Open Sans', sans-serif;
-                background: #C0C0C0;
-                }
-            h3{
-                color: black;
-                font-size: Small;
-                font-family: 'Open Sans', sans-serif;
-                background: #C0C0C0;
-                }
-            body{
-                background-color: #C0C0C0;
-                }
-            ul{
-                list-style-type: circle;
-                color: black;
-                font-size: Small;
-                font-family: 'Open Sans', sans-serif;
-                background: #C0C0C0;
-                }
-        </style>
+        <link rel="stylesheet" href="style.css">
+
+
     </head>
     <body>
-        <div id="menu">
-        <section class="title">
-        <h1>An adventurous explorer who runs the world around her.</h1>
-        </section>
 
+        <nav><ul>
+            <li><a href="West-Resume.html">Resume</a></li>
+        </ul></nav>
+
+        <h1>An adventurous explorer who runs the world around her.</h1>
+
+        <h2>
+            <img src="media/Pink.jpeg" alt="pink" height="200">
+            My name is Nadeah "Dee" West. I am a Senior Media Arts and Design Major at James Madison University with a double minor in General Business and Communications. Because of my academic path I have a well-rounded background in design, business, andn communications. It is now time to put my knowledge to the test in hands-on experiences. I love learning and am excited to learn how to do things in the real business world. I have takenmany research courses. When I dont know a topic, then I know how to learn more about it and conduct research methods to obtain that knowledge. I dont have the traditional Business degree. Because my background is in interactive design, I have bee taught how to best solve problems and look good while doing it. It isnt enough just to slave a problem. You need the research to spport it, ways to develop it, and then make it presentable in a way that everyone can understand. User experience research and design has taugh me all of these skills. Paired with my business and communications minors I am able to take a project from start to finish.
+
+            <br>
+            <br>
+            <img src="media/smile.jpeg" alt="smile" height="200">
+            I am currently a full-time student at James Madison Univeristy. Outside of classes I am envoloved in the JMU Club Gymnastics team, the Lambda Iota Chapter of Sigma Gamma Rho Sorority, Incorporated, and the JMU Advertising Club. I have done gymnastics all my life and i knew that I wanted to continue this journey in college. Gymnastics was one of the main reasons I can to JMU. I have loved every minuite of being on the gymnastics team. I have met my bestfriends and current roommates from joinging the team. From practice to competting at nationals each year, gymnastics has provided a stress reliving enviornment that I am able to express myself. I joined Sigma Gamma Rho Sorority, Inc. my sophomre year of college. It is a multi-cultutral service based sorority that falls under the Interculltural Greek Council. I am currently the president which requires a lot of responsibility and time. If I am not in class or the library, then I am working on planning programs, hosting meetings, or doing service for my sorority. Lastly, I am a member of JMU Advertising Club. Each year we make a marketing campaign for a business that we present and compete against other schools regionally. Ad Club gives real world marketing experience from the start of a campaign to the very end.
+        </h2>
+
+        <br>
+        <br>
+        <br>
+
+        <div id="menu">
         <section class="pic">
             <img src="media/Motto.jpg" alt="Motto" width="200" height="200">
         </section>
@@ -129,10 +99,6 @@
 
         <section class="pic">
             <img src="media/brave.jpg" alt="brave" width="200" height="200">
-        </section>
-
-        <section class="inspiration">
-            inspiration<a href="https://www.youtube.com/">YouTube.com</a>
         </section>
 
         </div>
