--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
     <head>
         <title>What's Your Story?</title>
         <meta charset="utf-8">
@@ -99,6 +99,10 @@
 
         <section class="pic">
             <img src="media/brave.jpg" alt="brave" width="200" height="200">
+        </section>
+
+        <section class="pic">
+            <img src="media/file-7.jpeg" alt="lights" width="200" height="200">
         </section>
 
         </div>
